改用mavonEditor的富文本编辑器，并使用marked解析HTML，实现代码高亮

--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "highlight.js": "^10.7.2",
     "jsbarcode": "^3.11.0",
     "jsonwebtoken": "^8.5.1",
+    "marked": "^2.0.1",
+    "mavon-editor": "^2.9.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.0",
     "pdf417-generator": "^1.0.0",
     "view-design": "^4.5.0",
     "vue": "^2.5.2",
-    "vue-quill-editor": "^3.0.6",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
