--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mavon-editor": "^2.9.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.0",
+    "multer": "^1.4.2",
     "pdf417-generator": "^1.0.0",
     "view-design": "^4.5.0",
     "vue": "^2.5.2",
